<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ui.fragment.CriarPinFragment">

    <!-- página de criação de PIN -->

    <!-- titulo -->
    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/defina_o_seu_pin_de_acesso"
        android:textColor="@color/branco"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pin_instruction_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/crie_pin"
        android:textColor="@color/branco"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_text"
        tools:ignore="TextContrastCheck" />

    <!-- bolinhas do pin -->
    <LinearLayout
        android:id="@+id/pin_dots_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pin_instruction_text">

        <ImageView
            android:id="@+id/pin1"
            style="@style/PinDotStyle"
            android:contentDescription="@string/bolinha_do_pin"
            android:src="@drawable/ic_pin_dot_antes"
            tools:ignore="ImageContrastCheck" />

        <ImageView
            android:id="@+id/pin2"
            style="@style/PinDotStyle"
            android:contentDescription="@string/bolinha_do_pin"
            android:src="@drawable/ic_pin_dot_antes"
            tools:ignore="ImageContrastCheck" />

        <ImageView
            android:id="@+id/pin3"
            style="@style/PinDotStyle"
            android:contentDescription="@string/bolinha_do_pin"
            android:src="@drawable/ic_pin_dot_antes"
            tools:ignore="ImageContrastCheck" />

        <ImageView
            android:id="@+id/pin4"
            style="@style/PinDotStyle"
            android:contentDescription="@string/bolinha_do_pin"
            android:src="@drawable/ic_pin_dot_antes"
            tools:ignore="ImageContrastCheck" />

        <ImageView
            android:id="@+id/pin5"
            style="@style/PinDotStyle"
            android:contentDescription="@string/bolinha_do_pin"
            android:src="@drawable/ic_pin_dot_antes"
            tools:ignore="ImageContrastCheck" />

        <ImageView
            android:id="@+id/pin6"
            style="@style/PinDotStyle"
            android:contentDescription="@string/bolinha_do_pin"
            android:src="@drawable/ic_pin_dot_antes"
            tools:ignore="ImageContrastCheck" />

    </LinearLayout>

    <!-- grid com os botoes para inserir pin -->
    <GridLayout
        android:id="@+id/pin_grid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:columnCount="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pin_dots_layout">

        <Button
            android:id="@+id/btn1"
            style="@style/PinButtonStyle" android:text="@string/_1" />
        <Button
            android:id="@+id/btn2"
            style="@style/PinButtonStyle" android:text="@string/_2" />
        <Button
            android:id="@+id/btn3"
            style="@style/PinButtonStyle" android:text="@string/_3" />
        <Button
            android:id="@+id/btn4"
            style="@style/PinButtonStyle" android:text="@string/_4" />
        <Button
            android:id="@+id/btn5"
            style="@style/PinButtonStyle" android:text="@string/_5" />
        <Button
            android:id="@+id/btn6"
            style="@style/PinButtonStyle" android:text="@string/_6" />
        <Button
            android:id="@+id/btn7"
            style="@style/PinButtonStyle" android:text="@string/_7" />
        <Button
            android:id="@+id/btn8"
            style="@style/PinButtonStyle" android:text="@string/_8" />
        <Button
            android:id="@+id/btn9"
            style="@style/PinButtonStyle" android:text="@string/_9" />

        <Space style="@style/PinButtonStyle" />
        <Button
            android:id="@+id/btn0"
            style="@style/PinButtonStyle" android:text="@string/_0" />
        <ImageButton
            android:id="@+id/btnDelete"
            style="@style/PinButtonStyle"
            android:contentDescription="@string/apagar"
            android:src="@drawable/backspace_icon" />
    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>