<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ui.fragment.LoginFragment">

    <!-- página de login -->

    <!-- mensagem de boas-vindas -->
    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:textColor="@color/branco"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- spinner para seleção de conta -->
    <Spinner
        android:id="@+id/contaSpinner"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/borda_edittext"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_text" />

    <TextView
        android:id="@+id/pin_instruction_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/insira_pin"
        android:textColor="@color/branco"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contaSpinner"
        tools:ignore="TextContrastCheck" />

    <!-- layout para os indicadores do PIN (pontos cinzentos) -->
    <LinearLayout
        android:id="@+id/pin_dots_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pin_instruction_text">

        <!-- 6 ImageViews para representar os pontos do PIN -->
        <ImageView
            android:id="@+id/pin1"
            style="@style/PinDotStyle"
            android:src="@drawable/ic_pin_dot_antes"
            tools:ignore="ImageContrastCheck"
            android:contentDescription="@string/bolinha_do_pin"/>

        <ImageView
            android:id="@+id/pin2"
            style="@style/PinDotStyle"
            android:src="@drawable/ic_pin_dot_antes"
            tools:ignore="ImageContrastCheck"
            android:contentDescription="@string/bolinha_do_pin"/>

        <ImageView
            android:id="@+id/pin3"
            style="@style/PinDotStyle"
            android:src="@drawable/ic_pin_dot_antes"
            tools:ignore="ImageContrastCheck"
            android:contentDescription="@string/bolinha_do_pin"/>

        <ImageView
            android:id="@+id/pin4"
            style="@style/PinDotStyle"
            android:src="@drawable/ic_pin_dot_antes"
            tools:ignore="ImageContrastCheck"
            android:contentDescription="@string/bolinha_do_pin"/>

        <ImageView
            android:id="@+id/pin5"
            style="@style/PinDotStyle"
            android:src="@drawable/ic_pin_dot_antes"
            tools:ignore="ImageContrastCheck"
            android:contentDescription="@string/bolinha_do_pin"/>

        <ImageView
            android:id="@+id/pin6"
            style="@style/PinDotStyle"
            android:src="@drawable/ic_pin_dot_antes"
            tools:ignore="ImageContrastCheck"
            android:contentDescription="@string/bolinha_do_pin"/>
    </LinearLayout>

    <!-- grelha para o teclado numérico -->
    <GridLayout
        android:id="@+id/pin_grid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:columnCount="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pin_dots_layout">

        <!-- botões do teclado numérico -->
        <Button android:id="@+id/btn1"
            style="@style/PinButtonStyle" android:text="@string/_1" />
        <Button android:id="@+id/btn2"
            style="@style/PinButtonStyle" android:text="@string/_2" />
        <Button android:id="@+id/btn3"
            style="@style/PinButtonStyle" android:text="@string/_3" />
        <Button android:id="@+id/btn4"
            style="@style/PinButtonStyle" android:text="@string/_4" />
        <Button android:id="@+id/btn5"
            style="@style/PinButtonStyle" android:text="@string/_5" />
        <Button android:id="@+id/btn6"
            style="@style/PinButtonStyle" android:text="@string/_6" />
        <Button android:id="@+id/btn7"
            style="@style/PinButtonStyle" android:text="@string/_7" />
        <Button android:id="@+id/btn8"
            style="@style/PinButtonStyle" android:text="@string/_8" />
        <Button android:id="@+id/btn9"
            style="@style/PinButtonStyle" android:text="@string/_9" />

        <!-- linha inferior com o "0" e "Apagar" -->
        <Space style="@style/PinButtonStyle" />
        <Button android:id="@+id/btn0"
            style="@style/PinButtonStyle" android:text="@string/_0" />
        <ImageButton
            android:id="@+id/btnApagar"
            style="@style/PinButtonStyle"
            android:contentDescription="@string/apagar"
            android:src="@drawable/backspace_icon" />
    </GridLayout>

    <!-- botão "Esqueci-me do PIN" -->
    <TextView
        android:id="@+id/btnEsqueci"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/esquecime_pin"
        android:textColor="@color/branco"
        android:textSize="20sp"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pin_grid" />

</androidx.constraintlayout.widget.ConstraintLayout>