<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:padding="16dp"
    tools:context=".ui.fragment.PerfilFragment">

    <!-- página de perfil do tutor -->

    <TextView
        android:id="@+id/tituloPerfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/perfil_do_utilizador"
        android:textColor="@color/branco"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Labels -->
    <TextView
        android:id="@+id/utiliNome"
        style="@style/LabelStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/nome"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tituloPerfil" />

    <TextView
        android:id="@+id/utiliEmail"
        style="@style/LabelStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/email_"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nomeDado" />

    <TextView
        android:id="@+id/utiliTelemovel"
        style="@style/LabelStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/n_de_telemovel"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailDado" />

    <TextView
        android:id="@+id/utiliNacionalidade"
        style="@style/LabelStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/nacionalidade"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/telemovelDado" />

    <TextView
        android:id="@+id/utiliSexo"
        style="@style/LabelStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/sexo"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nacionalidadeDado" />

    <TextView
        android:id="@+id/utiliCC"
        style="@style/LabelStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/cartao_cidadao"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sexoDado" />

    <TextView
        android:id="@+id/utiliData"
        style="@style/LabelStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/data_de_nascimento"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ccDado" />

    <TextView
        android:id="@+id/utiliMorada"
        style="@style/LabelStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/morada"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dataDado" />

    <!-- barrier para alinhar -->
    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="end"
        app:constraint_referenced_ids="utiliNome,utiliEmail,utiliTelemovel,utiliSexo,utiliCC,utiliNacionalidade,utiliData,utiliMorada" />

    <!-- informações do tutor -->
    <EditText
        android:id="@+id/nomeDado"
        style="@style/ValueStyle"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:enabled="false"
        android:inputType="textCapWords"
        app:layout_constraintBaseline_toBaselineOf="@id/utiliNome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/barrier"
        android:hint="@string/nome_do_tutor"
        android:textColorHint="@color/branco"
        android:autofillHints="nome"
        android:textSize="18sp"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/emailDado"
        style="@style/ValueStyle"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:enabled="false"
        android:inputType="textEmailAddress"
        app:layout_constraintBaseline_toBaselineOf="@id/utiliEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/barrier"
        android:hint="@string/email_tutor_com"
        android:textColorHint="@color/branco"
        android:autofillHints="email"
        android:textSize="18sp"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/telemovelDado"
        style="@style/ValueStyle"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:enabled="false"
        android:inputType="phone"
        app:layout_constraintBaseline_toBaselineOf="@id/utiliTelemovel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/barrier"
        android:hint="@string/_960249058"
        android:textColorHint="@color/branco"
        android:autofillHints="telemovel"
        android:textSize="18sp"
        tools:ignore="LabelFor,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/nacionalidadeDado"
        style="@style/ValueStyle"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:enabled="false"
        android:inputType="textCapWords"
        app:layout_constraintBaseline_toBaselineOf="@id/utiliNacionalidade"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/barrier"
        android:hint="@string/portugal"
        android:textColorHint="@color/branco"
        android:autofillHints="nacionalidade"
        android:textSize="18sp"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/sexoDado"
        style="@style/ValueStyle"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:enabled="false"
        android:inputType="textCapWords"
        app:layout_constraintBaseline_toBaselineOf="@id/utiliSexo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/barrier"
        android:hint="@string/feminino"
        android:textColorHint="@color/branco"
        android:autofillHints="sexo"
        android:textSize="18sp"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/ccDado"
        style="@style/ValueStyle"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:enabled="false"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@id/utiliCC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/barrier"
        android:hint="@string/_123456789"
        android:textColorHint="@color/branco"
        android:autofillHints="cc"
        android:textSize="18sp"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/dataDado"
        style="@style/ValueStyle"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:enabled="false"
        android:inputType="date"
        app:layout_constraintBaseline_toBaselineOf="@id/utiliData"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/barrier"
        android:hint="@string/_12_12_2005"
        android:textColorHint="@color/branco"
        android:autofillHints="data de nascimento"
        android:textSize="18sp"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/moradaDado"
        style="@style/ValueStyle"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:enabled="false"
        android:inputType="textPostalAddress"
        app:layout_constraintBaseline_toBaselineOf="@id/utiliMorada"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/barrier"
        android:hint="@string/rua_da_exemplo_123"
        android:textColorHint="@color/branco"
        android:autofillHints="morada"
        android:textSize="18sp"
        tools:ignore="VisualLintTextFieldSize" />


    <!-- botão para editar/guardar as informações do utilizador -->
    <Button
        android:id="@+id/btnEditarGuardar"
        style="@style/ButtonStyle"
        android:text="@string/editar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/moradaDado" />

</androidx.constraintlayout.widget.ConstraintLayout>